--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,8 @@
     <title>Contacto - Taxi Seguro Cusco Viajes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/estilos.css" />
+    <!-- Font Awesome CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -116,32 +118,64 @@
 
                 <!-- Información de contacto -->
                 <div class="col-md-5 text-white">
-                    <div class="bg-white p-4 rounded-4 shadow-sm text-dark">
+                    <div class="bg-white py-5 rounded-4 shadow-sm text-dark">
                         <h4 class="text-dark">Información de contacto</h4>
                         <ul class="list-unstyled mt-3 lh-lg">
-                            <li><i class="fas fa-phone-alt me-2"></i>+51 987 654 321</li>
-                            <li><i class="fas fa-envelope me-2"></i>reservas@taxisegurocusco.com</li>
-                            <li><i class="fas fa-map-marker-alt me-2"></i>Av. El Sol 123, Cusco - Perú</li>
+                            <li><i class="fas fa-phone-alt me-2"></i><strong>Teléfonos:</strong> (084) 223000 /
+                                (084) 224000</li>
+                            <li><i class="fas fa-user-tie me-2"></i><strong>WhatsApp Oficina:</strong> 910-40-60-90</li>
+                            <li><i class="fas fa-user-tie me-2"></i><strong>WhatsApp Administración:</strong>
+                                901-601-033</li>
+                            <li><i class="fas fa-envelope me-2"></i><strong>Correo:</strong>
+                                reservas@taxisegurocusco.com</li>
+                            <li><i class="fas fa-map-marker-alt me-2"></i><strong>Dirección:</strong> Av. El Sol 123,
+                                Cusco - Perú</li>
                         </ul>
 
-                        <h5 class="mt-4">Síguenos:</h5>
-                        <div class="social-icons d-flex gap-3 fs-4 mt-2">
-                            <a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="text-white"><i class="fab fa-whatsapp"></i></a>
-                        </div>
+                        <p class="mt-3 small">
+                            <strong>Somos TAXI SEGURO CUSCO</strong>: Llame directamente a nuestros números fijos y
+                            luego envíe su ubicación por
+                            WhatsApp.
+                        </p>
 
-                        <div class="mt-4">
-                            <iframe src="https://www.google.com/maps/embed?pb=..." width="100%" height="200"
-                                style="border:0;" allowfullscreen="" loading="lazy"
-                                class="rounded-4 shadow-sm"></iframe>
-                        </div>
+
+
+
+
+
+
+
+
                     </div>
+                <h5 class="mt-4 text-dark">Síguenos:</h5>
+                <div class="social-icons d-flex justify-content-center gap-3 fs-4 mt-2">
+                    <a href="https://www.facebook.com/" class="social-icon" style="color: #3b5998;" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" class="social-icon" style="color: #e4405f;" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" class="social-icon" style="color: #ff0000;"
+                        target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="https://www.tiktok.com/" class="social-icon" style="color: #000000;" target="_blank">
+                        <i class="fab fa-tiktok"></i>
+                    </a>
+                </div>
+
+
+
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- BOTON WHATTSAAP -->
+    <a href="https://wa.me/51910406090?text=Hola%2C%20quisiera%20más%20información%20sobre%20sus%20tours"
+        class="whatsapp-float" target="_blank" title="Contáctanos por WhatsApp">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp">
+    </a>
 
 
     <!-- FOOTER -->
