--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -65,14 +65,6 @@
         </div>
     </div>
 
-    <!-- Encabezado -->
-    <header class="py-5 text-center text-white"
-        style="background-size: cover; background-position: center;">
-        <div class="container">
-            <h1 class="display-4 fw-bold">Explora Nuestros Destinos</h1>
-            <p class="lead">Descubre la magia del Cusco con nuestros traslados privados y seguros</p>
-        </div>
-    </header>
 
     <!-- Modal para mostrar detalles del destino -->
     <div class="modal fade" id="modalDetallesDestino" tabindex="-1" aria-labelledby="modalDetallesLabel"
@@ -147,6 +139,13 @@
             </form>
         </div>
     </div>
+
+    <!-- BOTON WHATTSAAP -->
+    <a href="https://wa.me/51910406090?text=Hola%2C%20quisiera%20más%20información%20sobre%20sus%20tours"
+        class="whatsapp-float" target="_blank" title="Contáctanos por WhatsApp">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp">
+    </a>
+
     <!-- Bootstrap Bundle + JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
