--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nosotros - Taxi Seguro Cusco Viajes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="../style/estilos.css" />
+    <link rel="stylesheet" href="../style/estilos.css" />
 </head>
 
 <body>
@@ -14,35 +14,35 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg azul-oscuro">
         <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="../index.html">
-            <img src="../img/logo.svg" alt="Logo Taxi Seguro Cusco" style="width: 40px; height: 40px;" class="me-2">
+            <a class="navbar-brand d-flex align-items-center" href="../index.html">
+                <img src="../img/logo.svg" alt="Logo Taxi Seguro Cusco" style="width: 40px; height: 40px;" class="me-2">
                 <span class="text-white fw-bold">Taxi Seguro Cusco Viajes</span>
-        </a>
+            </a>
             <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="destinos.html">Destinos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="destinos.html">Destinos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
                     <li class="nav-item"><button class="btn btn-amarillo btn-sm ms-2" data-bs-toggle="modal"
                             data-bs-target="#loginModal">Iniciar Sesión</button>
                     </li>
-            </ul>
-        </div>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -75,14 +75,7 @@
         </div>
     </div>
 
-    <!-- HEADER -->
-    <header class="text-white text-center py-5 bg-image"
-        style="background-image: url('img/nosotros-banner.jpg'); background-size: cover;">
-        <div class="container">
-            <h1 class="display-4 fw-bold">Sobre Nosotros</h1>
-            <p class="lead">Más que transporte, ofrecemos experiencias seguras en tu visita a Cusco</p>
-        </div>
-    </header>
+
 
     <!-- SECCIÓN NOSOTROS -->
     <section class="py-5">
@@ -91,11 +84,11 @@
                 <div class="col-md-6">
                     <h2 class="text-brand">¿Quiénes somos?</h2>
                     <p>Somos una empresa cusqueña dedicada al transporte turístico privado. Nuestro objetivo es ofrecer
-                        seguridad, puntualidad y confianza a cada visitante que recorre esta hermosa región del Perú.
+                        seguridad, puntualidad y confianza a cada visitante que recorre esta hermosa región del Cusco.
                         Contamos con una flota moderna, conductores capacitados y atención personalizada.</p>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/nosotros-equipo.jpg" class="img-fluid rounded shadow" alt="Nuestro equipo">
+                    <img src="../img/taxi.jpg" class="img-fluid rounded shadow" alt="Nuestro equipo">
                 </div>
             </div>
 
@@ -132,6 +125,12 @@
             </div>
         </div>
     </section>
+
+    <!-- BOTON WHATTSAAP -->
+    <a href="https://wa.me/51910406090?text=Hola%2C%20quisiera%20más%20información%20sobre%20sus%20tours"
+        class="whatsapp-float" target="_blank" title="Contáctanos por WhatsApp">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp">
+    </a>
 
     <!-- FOOTER -->
     <footer class="azul-oscuro text-white text-center py-4">
