--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -46,43 +46,35 @@
         </div>
     </nav>
 
-<!-- Modal de Iniciar Sesión -->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="loginModalLabel">Iniciar Sesión</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form action="procesar_login.php" method="post">
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Correo Electrónico</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
-                    </div>
-                    <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-amarillo">Iniciar Sesión</button>
-                    </div>
-                </form>
-                <hr>
-                <p class="text-center mt-3"><a href="registro.html">¿No tienes cuenta? Regístrate aquí.</a></p>
+    <!-- Modal de Iniciar Sesión -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">Iniciar Sesión</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="procesar_login.php" method="post">
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Correo Electrónico</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-amarillo">Iniciar Sesión</button>
+                        </div>
+                    </form>
+                    <hr>
+                    <p class="text-center mt-3"><a href="registro.html">¿No tienes cuenta? Regístrate aquí.</a></p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-    <!-- ENCABEZADO -->
-    <header class="text-white text-center py-5 bg-image"
-        style="background-image: url('img/servicios-banner.jpg'); background-size: cover;">
-        <div class="container">
-            <h1 class="display-4 fw-bold">Nuestros Servicios</h1>
-            <p class="lead">Soluciones de transporte turístico privado, puntual y seguro en Cusco</p>
-        </div>
-    </header>
 
     <!-- SECCIÓN DE SERVICIOS -->
     <section class="py-5">
@@ -141,12 +133,20 @@
         </div>
     </section>
 
-<!-- FOOTER -->
-<footer class="azul-oscuro text-white text-center py-4">
-    <p class="mb-0">&copy; 2025 Taxi Seguro Cusco Viajes | Todos los derechos reservados</p>
-</footer>
+    <!-- FOOTER -->
+    <footer class="azul-oscuro text-white text-center py-5">
+        <p class="mb-0">&copy; 2025 Taxi Seguro Cusco Viajes | Todos los derechos reservados</p>
+    </footer>
+
+    <!-- BOTON WHATTSAAP -->
+    <a href="https://wa.me/51910406090?text=Hola%2C%20quisiera%20más%20información%20sobre%20sus%20tours"
+        class="whatsapp-float" target="_blank" title="Contáctanos por WhatsApp">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp">
+    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
+910406090
