--- a/index.html
+++ b/index.html
@@ -24,21 +24,11 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/pages/destinos.html">Destinos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/pages/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/pages/contacto.html">Contacto</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="destinos.html">Destinos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                     <li class="nav-item"><button class="btn btn-amarillo btn-sm ms-2" data-bs-toggle="modal"
                             data-bs-target="#loginModal">Iniciar Sesión</button>
                     </li>
@@ -57,7 +47,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="procesar_login.php" method="post">
+                    <form action="auth/procesar_login.php" method="post">
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo Electrónico</label>
                             <input type="email" class="form-control" id="email" name="email" required>
@@ -71,7 +61,7 @@
                         </div>
                     </form>
                     <hr>
-                    <p class="text-center mt-3"><a href="/pages/registro.html">¿No tienes cuenta? Regístrate aquí.</a>
+                    <p class="text-center mt-3"><a href="registro/registro.php">¿No tienes cuenta? Regístrate aquí.</a>
                     </p>
                 </div>
             </div>
@@ -173,7 +163,7 @@
                                 de
                                 Cusco. Con un servicio personalizado, cómodo y seguro, podrás conocer los lugares más
                                 emblemáticos con un conductor experto.</p>
-                            <a href="/pages/destinos.html" class="btn btn-amarillo">Más información</a>
+                            <a href="destinos.html" class="btn btn-amarillo">Más información</a>
                         </div>
                     </div>
                 </div>
@@ -187,7 +177,7 @@
                                 para
                                 quienes desean comodidad y privacidad. Ya sea para un viaje en la ciudad o un tour
                                 personalizado, ofrecemos la mejor atención.</p>
-                            <a href="/pages/destinos.html" class="btn btn-amarillo">Más información</a>
+                            <a href="destinos.html" class="btn btn-amarillo">Más información</a>
                         </div>
                     </div>
                 </div>
@@ -225,8 +215,7 @@
     <footer class="azul-oscuro text-white text-center py-2">
         <p class="mb-0">&copy; 2025 Taxi Seguro Cusco Viajes | Todos los derechos reservados</p>
         <p class="mt-1">
-            <a href="/admin/login_admin.html" class="text-warning text-decoration-none small">Panel de
-                Administración</a>
+            <a href="admin/login_admin.php" class="text-warning text-decoration-none small">Panel de Administración</a>
         </p>
     </footer>
 
