--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg azul-oscuro">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <a class="navbar-brand d-flex align-items-center" href="index.php">
                 <img src="img/logo.svg" alt="Logo Taxi Seguro Cusco" style="width: 40px; height: 40px;" class="me-2">
                 <span class="text-white fw-bold">Taxi Seguro Cusco Viajes</span>
             </a>
@@ -26,14 +26,12 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.php">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="destinos.html">Destinos</a></li>
                     <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                    <li class="nav-item"><button class="btn btn-amarillo btn-sm ms-2" data-bs-toggle="modal"
-                            data-bs-target="#loginModal">Iniciar Sesión</button>
-                    </li>
+     
                 </ul>
             </div>
         </div>
