--- a/destinos.html
+++ b/destinos.html
@@ -14,7 +14,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg azul-oscuro">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <a class="navbar-brand d-flex align-items-center" href="index.php">
                 <img src="img/logo.svg" alt="Logo Taxi Seguro Cusco" style="width: 40px; height: 40px;" class="me-2">
                 <span class="text-white fw-bold">Taxi Seguro Cusco Viajes</span>
             </a>
@@ -23,14 +23,12 @@
             </button>
             <div class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.php">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="destinos.html">Destinos</a></li>
                     <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                    <li class="nav-item"><button class="btn btn-amarillo btn-sm ms-2" data-bs-toggle="modal"
-                            data-bs-target="#loginModal">Iniciar Sesión</button>
-                    </li>
+
                 </ul>
             </div>
         </div>
