--- a/servicios.html
+++ b/servicios.html
@@ -14,7 +14,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg azul-oscuro">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <a class="navbar-brand d-flex align-items-center" href="index.php">
                 <img src="img/logo.svg" alt="Logo Taxi Seguro Cusco" style="width: 40px; height: 40px;" class="me-2">
                 <span class="text-white fw-bold">Taxi Seguro Cusco Viajes</span>
             </a>
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
+                        <a class="nav-link" href=index.php>Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="destinos.html">Destinos</a>
@@ -38,9 +38,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
-                    <li class="nav-item"><button class="btn btn-amarillo btn-sm ms-2" data-bs-toggle="modal"
-                            data-bs-target="#loginModal">Iniciar Sesión</button>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
